# Sub_cheap_McpAiAgent

./: .env.example  README.md  README_JA.md  mcp_server.py  pyproject.toml  requirements.txt  run.bat  setup.bat  verify_parsing.py
.github/workflows/: ci.yml  release.yml
docs/: MCP_CONFIGURATION.md  概念的要件定義書.md
docs/ADR/: ADR-0006-reject-internal-qa-loops.md  ADR-0007-reject-automated-task-routing-for-mvp.md  ADR-0008-explicit-ai-provider-configuration.md  ADR-0009-adoption-of-genspark-ai-provider.md  ADR-0010-architect-parttimer-delegation-model.md  ADR-0013-terminal-execution-log-summarization.md  ADR-0016-url-text-extraction-and-summarization.md  ADR-0018-security-guardrail-for-terminal-commands.md  ADR-0021-abandonment-of-semantic-release.md
mcp_ai_worker/: __init__.py  client.py  logger.py  server.py  utils.py
mcp_ai_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prompts/: target_finder_prompt.txt
src/sub_cheap_mcpaiagent/: __init__.py  list_gemini_models.py  test_integration.py
sub_cheap_mcpaiagent/: __init__.py  client.py  server.py  utils.py
tests/: debug_gemini_500.py  test_ast_compressor.py  test_mcp_server.py  test_merge_issue.py
tests/integration/: test_mcp_server.py  test_merge_issue.py  test_pipelines.py
tests/negative/: test_errors.py
tests/system/: test_flows.py
tests/unit/: test_client.py  test_url_tool.py  test_utils.py
