[project]
name = "sub-cheap-mcpaiagent"
version = "0.1.0"
description = "An MCP server that delegates code drafting to inexpensive LLMs."
authors = [{ name = "ayato-labs" }]
dependencies = [
    "fastmcp",
    "python-dotenv",
    "requests",
    "loguru",
    "google-genai>=2.8.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sub-cheap-mcp = "sub_cheap_mcpaiagent:mcp.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "E501", "C901"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]
