[project]
name = "sub-cheap-mcpaiagent"
version = "0.1.0"
description = "An MCP server that delegates code drafting to inexpensive LLMs."
authors = [{ name = "ayato-labs" }]
dependencies = [
    "fastmcp",
    "python-dotenv",
    "requests",
    "loguru",
    "google-genai>=2.8.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
sub-cheap-mcp = "sub_cheap_mcpaiagent.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sub_cheap_mcpaiagent*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Select default rules (E, F) + some extras if needed
select = ["E", "F", "B", "T20", "C90"]
# Realistic Compromise: Ignore rules that don't affect behavior
ignore = [
    "E501", # Line too long
    "T201", # print found
    "C901", # Complexity
]

[tool.ruff.lint.per-file-ignores]
# Helper scripts and tests already handled by global ignore, but kept for clarity or specific additions
"list_gemini_models.py" = []
"src/sub_cheap_mcpaiagent/list_gemini_models.py" = []
"tests/*" = []


[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]
