[project]
name = "mcp-ai-worker"
version = "0.1.0"
description = "An MCP server that delegates code drafting to inexpensive LLMs."
authors = [{ name = "ayato-labs" }]
dependencies = [
    "fastmcp",
    "python-dotenv",
    "requests",
    "loguru",
    "google-genai>=2.8.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
mcp-ai-worker = "mcp_ai_worker.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_ai_worker*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Select default rules (E, F) + some extras if needed
select = ["E", "F", "B", "T20", "C90"]
# Realistic Compromise: Ignore rules that don't affect behavior
ignore = [
    "T201", # print found
    "C901", # Complexity
]

[tool.ruff.lint.per-file-ignores]
# Helper scripts and tests already handled by global ignore, but kept for clarity or specific additions
"list_gemini_models.py" = []
"src/mcp_ai_worker/list_gemini_models.py" = []
"tests/*" = []

[tool.semantic_release]
version_variables = ["mcp_ai_worker/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"


[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
    "python-semantic-release",
]
